# sdk

./: .gitattributes  .gitignore  LICENSE  README.md  SCHEMA.md
contracts/: .gitignore  README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: ExecutionLog.sol
contracts/test/: ExecutionLog.t.sol
docs/: SETUP.md
examples/: README.md
examples/lerobot_eval/: README.md  metrics.py  run.py  test_metrics.py
sdk/: README.md  pyproject.toml
sdk/src/rsynth/: __init__.py  anchor.py  cli.py  errors.py  fetch.py  payload.py  sign.py
sdk/src/rsynth/abi/: ExecutionLog.json
sdk/tests/: conftest.py  test_anchor.py  test_cli.py  test_fetch.py  test_payload.py  test_sign.py
