[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rsynth"
version = "0.0.1"
description = "Verifiable Robot Execution SDK — sign payloads, anchor proofs on Base."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "rsynth" }]
dependencies = [
  "eth-account>=0.13.0",
  "web3>=7.0.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.urls]
Homepage = "https://rsynth.ai"
Repository = "https://github.com/rsynthlabs/sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/rsynth"]
